Update code and dependencies