@@ -15,18 +15,18 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <java.release>21</java.release>
+        <java.enable-preview>--enable-preview</java.enable-preview>
 
         <!-- Code dependencies -->
-        <netty.version>4.1.71.Final</netty.version>
-        <jackson.version>2.13.4</jackson.version>
-        <log4j2.version>2.17.1</log4j2.version>
+        <netty.version>4.1.95.Final</netty.version>
+        <jackson.version>2.15.1</jackson.version>
+        <log4j2.version>2.20.0</log4j2.version>
         <disruptor.version>3.4.4</disruptor.version>
-        <rest-assured.version>4.4.0</rest-assured.version>
+        <rest-assured.version>5.3.1</rest-assured.version>
 
         <!-- Test dependencies -->
-        <junit.version>5.8.1</junit.version>
+        <junit.version>5.10.0</junit.version>
     </properties>
 
     <build>
@@ -35,7 +35,26 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
+                    <version>3.11.0</version>
+                    <configuration>
+                        <showDeprecation>true</showDeprecation>
+                        <showWarnings>true</showWarnings>
+                        <source>${java.release}</source>
+                        <target>${java.release}</target>
+                        <compilerArgs>
+                            <arg>-g:none</arg> <!-- enables use of "_" as a variable/parameter name -->
+                            <arg>${java.enable-preview}</arg>
+                        </compilerArgs>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.2.2</version>
+                    <configuration>
+                        <excludedGroups>Infinite, Benchmark</excludedGroups>
+                        <argLine>${java.enable-preview}</argLine>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -43,7 +62,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
             </plugin>
         </plugins>
     </build>
